<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shop Number Juan</string>
    <string name="subtext">Theres only Juan place to go</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_popular">Most Popular Items</string>
    <string name="action_average_price">Average Price per item</string>
    <string name="action_date">Date of Purchase</string>
    <string name="action_expensive">Most Expensive Receipts</string>
    <string name="hello_world">Hello world!</string>
    <string name="sDisplayCategories">Categories</string>
    <string name="sDisplayItems">category</string>
    <string name="sDisplayShoppingList">Shopping List</string>
    <string name="add_item_name">item</string>
    <string name="checkout_name">name</string>
    <string name="checkout_quantity">quantity</string>
    <string name="checkout_price">price</string>
    <string name="checkout_date">date</string>
    <string name="checkout_rid">RID</string>
    <string name="sDisplayRecommendedList">Recommended Items</string>
    <string name="average_name">Name</string>
    <string name="average_quantity">Average Quantity</string>
    <string name="average_price">Average Price</string>
    <string name="popular_name">Name</string>
    <string name="popular_quantity">Popular Quantity</string>
    <string name="checkout_warning">Lists do not match</string>
    
</resources>