<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ivItemImageAverage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

   <LinearLayout
        android:id="@+id/rlPopUpAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvItemNameAverage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/average_name" />
       <TextView
	       android:id="@+id/tvItemQuantityAverage"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/average_quantity" />

	   <TextView
	       android:id="@+id/tvItemPriceAverage"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/average_price" />

    </LinearLayout>


</LinearLayout>